DRT-4891 Increase jvm mem for sbt